Change scrollbar system - Updated overlays - Corrected bug on resize event (user grid always displayed) - Corrected bug on multiple click on Admin checkbox

--- a/DEBUG/debug-20-07-2012/src/Scube/BaseBundle/Resources/public/css/core.grid.css
+++ b/DEBUG/debug-20-07-2012/src/Scube/BaseBundle/Resources/public/css/core.grid.css
@@ -1,5 +1,6 @@
 #Grid {
 	position:relative;
+	height:1500px;
 }
 
 .empty_cell {
