--- a/DEBUG/debug-20-07-2012/src/Scube/BaseBundle/Resources/public/css/core.header.css
+++ b/DEBUG/debug-20-07-2012/src/Scube/BaseBundle/Resources/public/css/core.header.css
@@ -23,7 +23,7 @@
 	cursor:pointer;
     left:0;
     top:0;
-	z-index:151;
+	z-index:191;
 }
 
 /* Interface Locker */
